--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="style.css" />
+  <!-- <link rel="stylesheet" href="style.css" /> -->
   <script src="script.js" defer></script>
 </head>
 
 <body>
   <main>
+    <label for="nome">Nome</label>
+    <input type="text" name="maça" id="nome" >
     <ul id="lista-de-frutas">
       <li id="fruta-1"></li>
       <li id="fruta-2"></li>
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <button onclick="adicionar()">Clique Aqui</button>
   </main>
 </body>
 
