--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
-    <button onclick="adicionar()">Clique Aqui</button>
+    <button onclick="adicionar()" ondblclick="imprimeFruta()">Clique Aqui</button>
   </main>
 </body>
 
